--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <h1>Kavin's Portfolio</h1>
     <h2>I'm Web developer</h2>
     <hr>
-    <h2><a href="./public/movie-ranking.html">Movie Ranking Project</a></h2>
+    <h2><a href="./public/movie-ranking.html">Love P'Bam</a></h2>
     <img src="./assets/images/movie-ranking.png" height="200" alt= "Movie Ranking Project">
-    <h3>The Best Movie Accordingto Angela</h3>
-    <h4>My top 3 movie of all-time.</h4>
+    <h3>The Best Movie According to Angela</h3>
+    <h4>My top 3 movies of all-time.</h4>
     <hr>
     
     
