--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -3,7 +3,7 @@
 <hr />
 <h3>Spirited Away</h3>
 <p>This is my favourite anime. I love the beautiful images.</p>
-<h3>Ex Machina</h3>
+<img src="./S__69525698.jpg" height="200">
 <p>Really cool sci-fi movie.</p>
 <h3>Drive</h3>
 <p>Super beautiful film. Really artistic.</p>
