--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,9 +1,7 @@
-<h1>The Best Movies According to Angela</h1>
-<h2>My top 3 movies of all-time.</h2>
+<h1>My Love</h1>
+<h2>Yossayuay</h2>
 <hr />
-<h3>Spirited Away</h3>
-<p>This is my favourite anime. I love the beautiful images.</p>
+<h3>Here!!!</h3>
+
 <img src="./S__69525698.jpg" height="200">
-<p>Really cool sci-fi movie.</p>
-<h3>Drive</h3>
-<p>Super beautiful film. Really artistic.</p>
+<p>JubJub</p>
